--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,10 @@
         "iostream": "cpp",
         "string_view": "cpp",
         "utility": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "functional": "cpp",
+        "istream": "cpp",
+        "tuple": "cpp"
     },
     "files.exclude": {
         "**/*.o": true,
